classDiagram
    class User {
        UUID id
        CiString email
        sign_in_with_token_for_password(String token)
        sign_in_with_password(CiString email, String password)
        register_with_password(String password, String password_confirmation, CiString email)
        get_by_subject()
        update()
        create()
        destroy()
        read()
    }
    class Token {
        Map extra_data
        String purpose
        String jti
        get_token(String token, String jti, String purpose)
        store_token(String token, Map extra_data, String purpose)
        store_confirmation_changes(String token, Map extra_data, String purpose)
        get_confirmation_changes(String jti)
        revoked?(String token, String jti)
        revoke_token(String token, Map extra_data)
        read_expired()
        expunge_expired()
    }

    User -- Bookmark
    User -- Comment
    User -- Like
    User -- Post
